--- a/public/assets/css/custom-inner.css
+++ b/public/assets/css/custom-inner.css
@@ -24,7 +24,7 @@ body {
 }
 
 .nav-link:focus, .nav-link:hover {
-    color: #BD7C3C;
+    color: #002f6c;
 }
 
 .btn {
@@ -32,7 +32,7 @@ body {
 }
 
 .btn-primary {
-    background-color: #BD7C3C;
+    background-color: #002f6c;
 }
 
 .btn-secondary {
@@ -40,13 +40,13 @@ body {
 }
 
 .btn-check:checked + .btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check) + .btn:active {
-    background-color: #BD7C3C;
-    border-color: #BD7C3C;
+    background-color: #002f6c;
+    border-color: #002f6c;
 }
 
 .btn-primary:hover {
-    background-color: #BD7C3C;
-    border-color: #BD7C3C;
+    background-color: #002f6c;
+    border-color: #002f6c;
 }
 
 .btn-secondary:hover {
@@ -55,7 +55,7 @@ body {
 }
 
 .text-primary {
-    color: #BD7C3C !important;
+    color: #002f6c !important;
 }
 
 .bg-red {
@@ -119,12 +119,12 @@ body {
     border-radius: 0;
     display: none;
     color: #161C2D;
-    background-color: #BD7C3C;
-    border-color: #BD7C3C;
+    background-color: #002f6c;
+    border-color: #002f6c;
 }
 
 .text-warning {
-    color: #BD7C3C !important;
+    color: #002f6c !important;
 }
 
 .text-link {
@@ -193,7 +193,7 @@ body {
 
 .country-calculator {
     font-weight: 600 !important;
-    color: #BD7C3C !important;
+    color: #002f6c !important;
     padding: 12px !important;
 }
 
@@ -242,17 +242,17 @@ input:read-only {
 }
 
 .text-blue {
-    color: #BD7C3C;
+    color: #002f6c;
 }
 
 .bg-info {
-    background-color: #BD7C3C !important;
+    background-color: #002f6c !important;
     color: #fff !important;
 }
 
 .btn-info:active, .btn-info:hover, .btn-info:focus {
     color: #fff !important;
-    background-color: #BD7C3C !important;
+    background-color: #002f6c !important;
 }
 
 .btn-success, .btn-success:active, .btn-success:hover, .btn-success:focus {
@@ -290,7 +290,7 @@ input:read-only {
 }
 
 .btn:focus-visible {
-    background-color: #BD7C3C;
+    background-color: #002f6c;
 }
 
 .calculator-bg {
@@ -298,11 +298,11 @@ input:read-only {
 }
 
 .bg-primary {
-    background-color: #BD7C3C !important;
+    background-color: #002f6c !important;
 }
 
 .border-primary {
-    border-color: #BD7C3C !important;
+    border-color: #002f6c !important;
 }
 
 .shadow-light-lg {
