--- a/public/mobile/assets/css/custom.css
+++ b/public/mobile/assets/css/custom.css
@@ -3,7 +3,7 @@
 }
 
 .text-primary {
-    color: #85a555 !important;
+    color: #002f6c !important;
 }
 
 .profileBox {
@@ -11,7 +11,7 @@
 }
 
 .bg-dark-blue {
-    background-color: #85a555;
+    background-color: #002f6c;
 }
 
 .text-dark-blue {
@@ -249,7 +249,7 @@ input:disabled {
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    background-color: #85a555 !important;
+    background-color: #002f6c !important;
     color: #fff !important;
 }
 
@@ -311,7 +311,7 @@ input:disabled {
 
 
 .appBottomMenu .item.active i.bi, .appBottomMenu .item.active i.icon, .appBottomMenu .item.active ion-icon, .appBottomMenu .item.active strong {
-    color: #85a555 !important;
+    color: #002f6c !important;
     font-weight: 600;
 }
 
@@ -433,14 +433,14 @@ body, .modal-content {
 }
 
 .btn-primary {
-    background: #85a555 !important;
-    border-color: #85a555 !important;
+    background: #002f6c !important;
+    border-color: #002f6c !important;
     color: #ffffff !important;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-    background: #85a555 !important;
-    border-color: #85a555 !important;
+    background: #002f6c !important;
+    border-color: #002f6c !important;
 }
 
 .form-group.boxed .form-control {
@@ -457,7 +457,7 @@ body, .modal-content {
 }
 
 .form-group.boxed .form-control:focus {
-    border-color: #85a555;
+    border-color: #002f6c;
 }
 
 ::placeholder, .text-placeholder {
@@ -465,7 +465,7 @@ body, .modal-content {
 }
 
 .appBottomMenu .item .action-button {
-    background: #85a555;
+    background: #002f6c;
 }
 
 .l-10 {
